# RepulsiveImplem

./: README.md  show.py
geodesic_interpolation/: CMakeLists.txt
geodesic_interpolation/Meshes/dancer/: README.txt
geodesic_interpolation/Meshes/hand/: 0.off  0_simplified.off  1.off  10.off  11.off  12.off  13.off  14.off  15.off  16.off  17.off  18.off  19.off  1_simplified.off  2.off  20.off  21.off  22.off  23.off  24.off  25.off  26.off  27.off  28.off  29.off  3.off  30.off  4.off  5.off  6.off  7.off  8.off  9.off  README.txt
geodesic_interpolation/Meshes/optimized/hand/: 1.off  10.off  2.off  3.off  4.off  5.off  6.off  7.off  8.off  9.off
geodesic_interpolation/Meshes/scape/: README.txt  mesh000.off  mesh001.off  mesh002.off  mesh003.off  mesh004.off  mesh005.off  mesh006.off  mesh007.off  mesh008.off  mesh009.off  mesh010.off  mesh011.off  mesh012.off  mesh013.off  mesh014.off  mesh015.off  mesh016.off  mesh017.off  mesh018.off  mesh019.off  mesh020.off  mesh021.off  mesh022.off  mesh023.off  mesh024.off  mesh025.off  mesh026.off  mesh027.off  mesh028.off  mesh029.off  mesh030.off  mesh031.off  mesh032.off  mesh033.off  mesh034.off  mesh035.off  mesh036.off  mesh037.off  mesh038.off  (+32 more)
geodesic_interpolation/Meshes/test/: intermediate_1.off  intermediate_5.off
geodesic_interpolation/include/: EnergyCalculator.hpp  MeshHandler.hpp  TotalEnergyFunctional.h  TotalEnergyGradient.h  TotalEnergyHessian.h
geodesic_interpolation/src/: CMakeLists.txt  EnergyCalculator.cpp  MeshHandler.cpp  main.cpp
test/: bounding.py  code_snippets.py  implementationtry.py  second.py  secondimplem.py
test/classes/TPE/: collision.py  energies.py  fmm.py  hierarchy.py  metrics.py  solvers.py  sparse.py  tensors.py
test/third/: __init__.py  configurations.py  energies.py  helpers.py  optim.py  third.py
